# app-template

./: CLAUDE.md  CONTRIBUTING.md  Dockerfile.go  Dockerfile.node  Dockerfile.python  README.md  a11y.md  cookiecutter.json  go.mod  init.sh  package.json  pyproject.toml  requirements.txt  test-workflows.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci-go.yml  ci-node.yml  ci-python.yml  sca.yml
deploy/: argocd-app.yaml
deploy/helm-chart/: Chart.yaml  values.yaml
deploy/helm-chart/templates/: _helpers.tpl  deployment.yaml  service.yaml
docs/: design_doc.md
docs/adr/: 000-template.md
infra/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/aws/: main.tf  outputs.tf  variables.tf
infra/modules/azure/: main.tf  outputs.tf  variables.tf
infra/modules/gcp/: main.tf  outputs.tf  variables.tf
observability/: otel-compose.yml  slo.yaml
