[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.service_slug }}"
version = "1.0.0"
description = "{{ cookiecutter.service_name }}"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # TODO: Ajouter vos dépendances projet ici
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "W", "I", "N", "UP"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true